src/esercizio3/grammatica.txt
N = {Program, Stat, Id_num, Relaz}
T = {IF,THEN,ELSE,ID,NUM,LE,NE,LT,GE,GT,SEMI}
S = Program
P = {
	Program -> Stat Program_1
	Program_1 -> SEMI Stat Program_1 | epsilon
	Stat -> matched_stat | open_stat
	matched_stat -> IF Id_num Relaz Id_num THEN matched_stat ELSE matched_stat | ID ASSING ID_num
    open_stat -> IF Id_num Relaz Id_num THEN open_stat1
    opens_stat1 -> Stat | matched_stat ELSE open_stat
	Id_num -> ID | NUM
	Relaz -> LE | NE | LT | GE | GT
}
